# tre

./: Cargo.toml  README.md  flake.nix  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  updateHash.yml
manual/: tre.1
scripts/completion/: _tre  _tre.ps1  tre.bash  tre.elv  tre.fish
src/: cli.rs  diagram_formatting.rs  file_tree.rs  json_formatting.rs  output.rs  path_finders.rs  tre.rs
tests/: integration_tests.rs
