[package]
name = "tre-command"
version = "0.4.0"
authors = ["Daniel Duan <daniel@duan.ca>"]
edition = "2018"
license = "MIT"
description = "Tree command, improved."
documentation = "https://github.com/Migelo/tre/blob/master/README.md"
readme = "README.md"
homepage = "https://github.com/Migelo/tre"
repository = "https://github.com/Migelo/tre"
exclude = [
    "/.github/*",
    "alias_demo.gif",
    "flake.nix",
    "flake.lock",
    "scripts/*",
    "fixtures/*",
]
keywords = ["cli", "tool", "filesystem"]
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2"
clap = { version = "4.5.49", features = ["derive"] }
getopts = "0.2"
indexmap = "2.5"
lscolors = "0.20"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slab = "0.4.9"
termcolor = "1"
walkdir = "2.5.0"

[build-dependencies]
clap = { version = "4.5.49", features = ["cargo"] }
clap_complete = "4.5.59"

[dev-dependencies]
assert_cmd = "2.0.17"

[[bin]]
name = "tre"
path = "src/main.rs"
